# kokkos-proj-tmpl

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: build_or_find_kokkos.cmake
doc/stencil/: plot_stencil_alfven_icpc.py  plot_stencil_irene_icpc_1socket.py  plot_stencil_knl_omp_128.py  plot_stencil_knl_omp_256.py  plot_stencil_knl_omp_64.py  plot_stencil_ouessant_k80.py  plot_stencil_ouessant_p100.py
src/: BatchedDotProduct.cpp  BatchedDotProduct_bench.cpp  BatchedDotProduct_nTeamsPerDot.cpp  CMakeLists.txt  HipTimer.h  HostTimer.h  KokkosStream.cpp  KokkosStream.hpp  KokkosStream_bench.cpp  OpenMPTimer.cpp  SimdKokkosStream.cpp  SimdKokkosStream.hpp  SimpleTimer.cpp  Stream.h  compute_pi.cpp  deep_copy.cpp  saxpy_kokkos_lambda.cpp  stencil.cpp  test.cpp
src/cnpy/: cnpy.cpp  cnpy.h  cnpy_example.cpp
